# torch-gravity

./: pyproject.toml
src/torch_gravity/: __init__.py  boids.py  render.py
