[project]
name = "torch-gravity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "UFO-101", email = "josephmiller101@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
